src/test/ui/closures/2229_closure_analysis/diagnostics/borrowck/borrowck-2.stderr
warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/borrowck-2.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error[E0502]: cannot borrow `p` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-2.rs:13:17
   |
LL |     let y = &p.y;
   |             ---- immutable borrow occurs here
LL |     let mut c = || {
   |                 ^^ mutable borrow occurs here
LL |
LL |        println!("{:?}", p);
   |                         - second borrow occurs due to use of `p` in closure
LL |        let x = &mut p.x;
   |                     --- capture is mutable because of use here
...
LL |     println!("{}", y);
   |                    - immutable borrow later used here

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0502`.
